<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/copyBtm"
        android:icon="@drawable/ic_copy_btm"
        android:title="@string/copy"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/pasteBtm"
        android:icon="@drawable/ic_paste_btm"
        android:title="@string/paste"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/undoBtm"
        android:icon="@drawable/ic_undo_btm"
        android:title="@string/undo"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/redoBtm"
        android:icon="@drawable/ic_redo_btm"
        android:title="@string/redo"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/searchBtm"
        android:contentDescription="@string/content_description_search"
        android:icon="@drawable/ic_search_in_btm"
        android:title="@string/search_in"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/newFileBtm"
        android:icon="@drawable/ic_new_file_btm"
        android:title="@string/_new"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

</menu>